--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   file_picker: ^5.0.1
   hotkey_manager: ^0.1.7
   split_view: ^3.2.1
+  macos_ui: ^1.7.3
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
