--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   split_view: ^3.2.1
   macos_ui: ^1.7.3
   provider: ^6.0.3
+  # 使用mapIndexed
+  collection: ^1.16.0
 
 dev_dependencies:
   flutter_test:
