--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   provider: ^6.0.3
   # 使用mapIndexed
   collection: ^1.16.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
