--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   file_picker: ^5.0.1
   hotkey_manager: ^0.1.7
   split_view: ^3.2.1
+  collection: ^1.16.0
+  intl: ^0.17.0
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
