--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   collection: ^1.16.0
   intl: ^0.17.0
   provider: ^6.0.4
+  pasteboard: ^0.2.0
 
 dev_dependencies:
   flutter_test:
